--- a/The Sims 2 SimsExplorer/The Sims 2 SimsExplorer.csproj
+++ b/The Sims 2 SimsExplorer/The Sims 2 SimsExplorer.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="FileHelpers" Version="3.5.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.6" />
   </ItemGroup>
 
 </Project>
