--- a/The Sims 2 SimsExplorer/The Sims 2 SimsExplorer.csproj
+++ b/The Sims 2 SimsExplorer/The Sims 2 SimsExplorer.csproj
@@ -8,6 +8,8 @@
   <ItemGroup>
     <PackageReference Include="FileHelpers" Version="3.5.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.6" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="5.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
 </Project>
